fixes issues on ie11 and edge
ie11 :not([open]) 不會馬上作用, 改反過來寫
edge form submit 會送出, 加上 onsubmit return false

--- a/src/sass/dialogify.scss
+++ b/src/sass/dialogify.scss
@@ -1,5 +1,5 @@
 .dialogify {
-    display: block;
+    display: none;
     position: absolute;
     top: 50%;
     bottom: auto;
@@ -20,8 +20,8 @@
     padding: 0;
     line-height: 100%;
 
-    &:not([open]) {
-        display: none;
+    &[open] {
+        display: block;
     }
 
     &.fixed {
